library/src/libqstandarditemmodel.h

typedef struct QMetaObject QMetaObject;
typedef struct QMimeData QMimeData;
typedef struct QModelIndex QModelIndex;
typedef struct QModelRoleDataSpan QModelRoleDataSpan;
typedef struct QObject QObject;
typedef struct QStandardItem QStandardItem;
typedef struct QStandardItemModel QStandardItemModel;
typedef struct QVariant QVariant;
QTLIBC_API QStandardItemModel* QStandardItemModel_new();
QTLIBC_API QStandardItemModel* QStandardItemModel_new2(int rows, int columns);
QTLIBC_API QStandardItemModel* QStandardItemModel_new3(QObject* parent);
QTLIBC_API QStandardItemModel* QStandardItemModel_new4(int rows, int columns, QObject* parent);
QTLIBC_API QMetaObject* QStandardItemModel_MetaObject(const QStandardItemModel* self);
QTLIBC_API void* QStandardItemModel_Metacast(QStandardItemModel* self, const char* param1);
QTLIBC_API int QStandardItemModel_Metacall(QStandardItemModel* self, int param1, int param2, void** param3);
QTLIBC_API libqt_string QStandardItemModel_Tr(const char* s);
QTLIBC_API void QStandardItemModel_SetItemRoleNames(QStandardItemModel* self, libqt_map /* of int to libqt_string */ roleNames);
QTLIBC_API libqt_map /* of int to libqt_string */ QStandardItemModel_RoleNames(const QStandardItemModel* self);
QTLIBC_API QModelIndex* QStandardItemModel_Index(const QStandardItemModel* self, int row, int column, QModelIndex* parent);
QTLIBC_API QModelIndex* QStandardItemModel_Parent(const QStandardItemModel* self, QModelIndex* child);
QTLIBC_API int QStandardItemModel_RowCount(const QStandardItemModel* self, QModelIndex* parent);
QTLIBC_API int QStandardItemModel_ColumnCount(const QStandardItemModel* self, QModelIndex* parent);
QTLIBC_API bool QStandardItemModel_HasChildren(const QStandardItemModel* self, QModelIndex* parent);
QTLIBC_API QVariant* QStandardItemModel_Data(const QStandardItemModel* self, QModelIndex* index, int role);
QTLIBC_API void QStandardItemModel_MultiData(const QStandardItemModel* self, QModelIndex* index, QModelRoleDataSpan* roleDataSpan);
QTLIBC_API bool QStandardItemModel_SetData(QStandardItemModel* self, QModelIndex* index, QVariant* value, int role);
QTLIBC_API bool QStandardItemModel_ClearItemData(QStandardItemModel* self, QModelIndex* index);
QTLIBC_API QVariant* QStandardItemModel_HeaderData(const QStandardItemModel* self, int section, int orientation, int role);
QTLIBC_API bool QStandardItemModel_SetHeaderData(QStandardItemModel* self, int section, int orientation, QVariant* value, int role);
QTLIBC_API bool QStandardItemModel_InsertRows(QStandardItemModel* self, int row, int count, QModelIndex* parent);
QTLIBC_API bool QStandardItemModel_InsertColumns(QStandardItemModel* self, int column, int count, QModelIndex* parent);
QTLIBC_API bool QStandardItemModel_RemoveRows(QStandardItemModel* self, int row, int count, QModelIndex* parent);
QTLIBC_API bool QStandardItemModel_RemoveColumns(QStandardItemModel* self, int column, int count, QModelIndex* parent);
QTLIBC_API int QStandardItemModel_Flags(const QStandardItemModel* self, QModelIndex* index);
QTLIBC_API int QStandardItemModel_SupportedDropActions(const QStandardItemModel* self);
QTLIBC_API libqt_map /* of int to QVariant* */ QStandardItemModel_ItemData(const QStandardItemModel* self, QModelIndex* index);
QTLIBC_API bool QStandardItemModel_SetItemData(QStandardItemModel* self, QModelIndex* index, libqt_map /* of int to QVariant* */ roles);
QTLIBC_API void QStandardItemModel_Clear(QStandardItemModel* self);
QTLIBC_API void QStandardItemModel_Sort(QStandardItemModel* self, int column, int order);
QTLIBC_API QStandardItem* QStandardItemModel_ItemFromIndex(const QStandardItemModel* self, QModelIndex* index);
QTLIBC_API QModelIndex* QStandardItemModel_IndexFromItem(const QStandardItemModel* self, QStandardItem* item);
QTLIBC_API QStandardItem* QStandardItemModel_Item(const QStandardItemModel* self, int row);
QTLIBC_API void QStandardItemModel_SetItem(QStandardItemModel* self, int row, int column, QStandardItem* item);
QTLIBC_API void QStandardItemModel_SetItem2(QStandardItemModel* self, int row, QStandardItem* item);
QTLIBC_API QStandardItem* QStandardItemModel_InvisibleRootItem(const QStandardItemModel* self);
QTLIBC_API QStandardItem* QStandardItemModel_HorizontalHeaderItem(const QStandardItemModel* self, int column);
QTLIBC_API void QStandardItemModel_SetHorizontalHeaderItem(QStandardItemModel* self, int column, QStandardItem* item);
QTLIBC_API QStandardItem* QStandardItemModel_VerticalHeaderItem(const QStandardItemModel* self, int row);
QTLIBC_API void QStandardItemModel_SetVerticalHeaderItem(QStandardItemModel* self, int row, QStandardItem* item);
QTLIBC_API void QStandardItemModel_SetHorizontalHeaderLabels(QStandardItemModel* self, libqt_list /* of libqt_string */ labels);
QTLIBC_API void QStandardItemModel_SetVerticalHeaderLabels(QStandardItemModel* self, libqt_list /* of libqt_string */ labels);
QTLIBC_API void QStandardItemModel_SetRowCount(QStandardItemModel* self, int rows);
QTLIBC_API void QStandardItemModel_SetColumnCount(QStandardItemModel* self, int columns);
QTLIBC_API void QStandardItemModel_AppendRow(QStandardItemModel* self, libqt_list /* of QStandardItem* */ items);
QTLIBC_API void QStandardItemModel_AppendColumn(QStandardItemModel* self, libqt_list /* of QStandardItem* */ items);
QTLIBC_API void QStandardItemModel_AppendRowWithItem(QStandardItemModel* self, QStandardItem* item);
QTLIBC_API void QStandardItemModel_InsertRow(QStandardItemModel* self, int row, libqt_list /* of QStandardItem* */ items);
QTLIBC_API void QStandardItemModel_InsertColumn(QStandardItemModel* self, int column, libqt_list /* of QStandardItem* */ items);
QTLIBC_API void QStandardItemModel_InsertRow2(QStandardItemModel* self, int row, QStandardItem* item);
QTLIBC_API bool QStandardItemModel_InsertRowWithRow(QStandardItemModel* self, int row);
QTLIBC_API bool QStandardItemModel_InsertColumnWithColumn(QStandardItemModel* self, int column);
QTLIBC_API QStandardItem* QStandardItemModel_TakeItem(QStandardItemModel* self, int row);
QTLIBC_API libqt_list /* of QStandardItem* */ QStandardItemModel_TakeRow(QStandardItemModel* self, int row);
QTLIBC_API libqt_list /* of QStandardItem* */ QStandardItemModel_TakeColumn(QStandardItemModel* self, int column);
QTLIBC_API QStandardItem* QStandardItemModel_TakeHorizontalHeaderItem(QStandardItemModel* self, int column);
QTLIBC_API QStandardItem* QStandardItemModel_TakeVerticalHeaderItem(QStandardItemModel* self, int row);
QTLIBC_API QStandardItem* QStandardItemModel_ItemPrototype(const QStandardItemModel* self);
QTLIBC_API void QStandardItemModel_SetItemPrototype(QStandardItemModel* self, QStandardItem* item);
QTLIBC_API libqt_list /* of QStandardItem* */ QStandardItemModel_FindItems(const QStandardItemModel* self, libqt_string text);
QTLIBC_API int QStandardItemModel_SortRole(const QStandardItemModel* self);
QTLIBC_API void QStandardItemModel_SetSortRole(QStandardItemModel* self, int role);
QTLIBC_API libqt_list /* of libqt_string */ QStandardItemModel_MimeTypes(const QStandardItemModel* self);
QTLIBC_API QMimeData* QStandardItemModel_MimeData(const QStandardItemModel* self, libqt_list /* of QModelIndex* */ indexes);
QTLIBC_API bool QStandardItemModel_DropMimeData(QStandardItemModel* self, QMimeData* data, int action, int row, int column, QModelIndex* parent);
void QStandardItemModel_Connect_ItemChanged(QStandardItemModel* self, intptr_t slot);
QTLIBC_API libqt_string QStandardItemModel_Tr2(const char* s, const char* c);
QTLIBC_API libqt_string QStandardItemModel_Tr3(const char* s, const char* c, int n);
QTLIBC_API QStandardItem* QStandardItemModel_Item2(const QStandardItemModel* self, int row, int column);
QTLIBC_API bool QStandardItemModel_InsertRow22(QStandardItemModel* self, int row, QModelIndex* parent);
QTLIBC_API bool QStandardItemModel_InsertColumn2(QStandardItemModel* self, int column, QModelIndex* parent);
QTLIBC_API QStandardItem* QStandardItemModel_TakeItem2(QStandardItemModel* self, int row, int column);
QTLIBC_API libqt_list /* of QStandardItem* */ QStandardItemModel_FindItems2(const QStandardItemModel* self, libqt_string text, int flags);
QTLIBC_API libqt_list /* of QStandardItem* */ QStandardItemModel_FindItems3(const QStandardItemModel* self, libqt_string text, int flags, int column);
QTLIBC_API void QStandardItemModel_Delete(QStandardItemModel* self);